# spi-tool

./: .gitignore  .justfile  LICENSE  README.md  cliff.toml  main.py  pyproject.toml
src/spi_tool/: __init__.py  _helper.py  _utils.py  cli.py  ui.py  version.py
src/spi_tool/models/: __init__.py  beta.py  regression.py
src/spi_tool/pages/: __init__.py  about.py  changelog.py  faq.py  home.py  user_guide.py
src/spi_tool/resources/data/: Henry-Hub-Natural-Gas-Spot-Price.csv  carbon-prices.csv  daily-gas-prices.csv  miso-daily-demand.csv  simple-carbon-prices.csv
tests/: test_beta.py  test_regression.py
tests/data/: duplicated_dates.csv  historical_demand.csv  lognormal_samples.csv  samples.csv  valid_carbon_prices.csv
