[project]
name = "spi_tool"
version = "0.1.0"
description = "Stochastic Planning Input Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyter-bokeh>=4.0.5",
  "panel==1.6.1",
  "matplotlib>=3.10.0",
  "pandas>=2.2.3",
  "scipy>=1.14.1",
  "scikit-learn>=1.6.0",
  "statsmodels>=0.14.4",
  "param>=2.2.0",
  "click>=8.1.8",
  "watchfiles>=1.0.3",
  "tabulate>=0.9.0",
  "holoviews>=1.20.0",
  "typing-extensions>=4.13.2",
  "ipywidgets>=8.1.6",
]

[project.scripts]
spi-tool = "spi_tool.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
# Specify files to include in the build
include = ["resources/**"]

[dependency-group]
dev = [
  "ipykernel>=6.29.5",
  "pyinstaller>=6.11.1",
  "pytest>=8.3.4",
  "ruff>=0.8.0",
]
